--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <h3>App Component</h3>
 <hr>
-<app-servers></app-servers>
-<app-servers></app-servers>
+<div class="container">
+  <app-success-alert></app-success-alert>
+  <app-warning-alert></app-warning-alert>
+  <app-success-alert></app-success-alert>
+</div>
