--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,6 @@
-<h3>Property and Event Binding Combined</h3>
+<h3>Sending data to child component - @Input()</h3>
 <hr>
 <div class="container">
-  <p>My name is {{name}} and I'm {{ocupation}}.</p>
-  <p>Name:</p>
-  <input [value]="name" [(ngModel)]="name">
-  <br>
-  <p>Ocupation:</p>
-  <input [value]="ocupation" [(ngModel)]="ocupation">
+  <app-child [tasks]="tasksList"></app-child>
 
 </div>
