--- a/src/app/clicker1/clicker1.component.html
+++ b/src/app/clicker1/clicker1.component.html
@@ -1,3 +1,3 @@
-<p>
-  clicker1 works!
-</p>
+<h3>{{title}}</h3>
+<h4> Clicks: {{clicks}}</h4>
+<button type="button" class="btn btn-info" (click)="add()">Click</button>
