--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <h2>{{title}}</h2>
-  <p>Check the console.</p>
+  <h3>Total clicks: {{ clickService.summedClicks }}</h3>
   <app-clicker1></app-clicker1>
   <app-clicker2></app-clicker2>
 </div>
