--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div class="container">
-  <button type="button" class="btn btn-primary" (click)="getPosts">Get Posts</button>
-  <button type="button" class="btn btn-primary" (click)="getPost">Get Post</button>
-  <button type="button" class="btn btn-primary" (click)="getPostByUser">Get Post by User</button>
-  <button type="button" class="btn btn-primary" (click)="addPost">Add Post</button>
-  <button type="button" class="btn btn-primary" (click)="updatePost">Update Post</button>
-  <button type="button" class="btn btn-primary" (click)="deletePost">Delete Post</button>
-  <button type="button" class="btn btn-primary" (click)="changePost">Change Post</button>
+  <button type="button" class="btn btn-primary" (click)="getPosts()">Get Posts</button>
+  <button type="button" class="btn btn-primary" (click)="getPost()">Get Post</button>
+  <button type="button" class="btn btn-primary" (click)="getPostByUser()">Get Post by User</button>
+  <button type="button" class="btn btn-primary" (click)="addPost()">Add Post</button>
+  <button type="button" class="btn btn-primary" (click)="updatePost()">Update Post</button>
+  <button type="button" class="btn btn-primary" (click)="deletePost()">Delete Post</button>
+  <button type="button" class="btn btn-primary" (click)="changePost()">Change Post</button>
 </div>
