--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,3 +7,9 @@
   <button type="button" class="btn btn-primary" (click)="deletePost()">Delete Post</button>
   <button type="button" class="btn btn-primary" (click)="changePost()">Change Post</button>
 </div>
+
+<ul *ngFor="let post of posts">
+  <li>Post {{ post.id }}</li>
+  <li>Title {{ post.title }}</li>
+  <li>Boby {{ post.body }}</li>
+</ul>
