--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <button type="button" class="btn btn-primary" (click)="getPosts()">Get Posts</button>
     <button type="button" class="btn btn-primary" (click)="getPost()">Get Post</button>
-    <button type="button" class="btn btn-primary" (click)="getPostByUser()">Get Post by User</button>
+    <button type="button" class="btn btn-primary" (click)="getPostsByUser()">Get Post by User</button>
     <button type="button" class="btn btn-primary" (click)="addPost()">Add Post</button>
     <button type="button" class="btn btn-primary" (click)="updatePost()">Update Post</button>
     <button type="button" class="btn btn-primary" (click)="deletePost()">Delete Post</button>
@@ -15,7 +15,8 @@
 
 <div *ngIf="posts.length > 0 ">
   <ul *ngFor="let post of posts">
-    <li>Post {{ post.id }}</li>
+    <li>User ID {{ post.userId }}</li>
+    <li>Post ID {{ post.id }}</li>
     <li>Title {{ post.title }}</li>
     <li>Boby {{ post.body }}</li>
   </ul>
