--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,7 @@
 </div>
 
 <div *ngIf="posts.length > 0 ">
+  <p>There is {{posts.length}} posts. </p>
   <ul *ngFor="let post of posts">
     <li>User ID {{ post.userId }}</li>
     <li>Post ID {{ post.id }}</li>
